tests/lime/pass/bugs/macros/macro_list_contains_open_bracket_unclosed.wsa
push 1
macro hello [push [ 2
