tests/lime/fail/tokens/macro_first/byte_56.wsa
macro 8 [push 56] 8
